k8s/base/catalog/catalog.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: cinema
spec:
  selector:
    app: catalog-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
