k8s/base/catalog/catalog.route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-route
  namespace: cinema
spec:
  parentRefs:
  - name: cinema-gateway
  hostnames:
  - "cinema.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /catalog
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: catalog-service-v1
      port: 80
      weight: 90
    - name: catalog-service-v2
      port: 80
      weight: 10
